style.css
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");

* {
  font-family: "Press Start 2P", system-ui, Arial, Helvetica, sans-serif;
  margin: 0;
  padding: 0;
}

body,
#wrapper {
  min-height: 100vh;
  min-height: 100svh;
}

#wrapper,
#row,
.choices {
  display: flex;
}

#wrapper {
  flex-direction: column;
}

main {
  flex-grow: 1;
}

#left,
#right {
  flex-basis: 50%;
}

@media screen and (max-width: 720px) {
  #row {
    flex-direction: column;
    width: 100%;
    gap: 0;
  }
}

